styles/Footer.module.scss
.footer {
  text-align: center;
  padding: 28px;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  gap: 20px;
  align-items: center;
  justify-content: center;

  img {
    width: 214px;
    height: auto;
    margin-bottom: 8px;
  }

  div {
    font-size: 20px;
    font-weight: 300;
    line-height: 18px;
  }

  h6 {
    margin-top: 28px;
  }
}

